# Seminar

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/results/: adf_test_log_diff.xlsx  adf_test_raw_series.xlsx  chap_01_us_inflation_contribution_data.xlsx  chap_04_predicted_labels_df.xlsx  chap_04_unique_df_full.xlsx  chap_06_adf_test_log_diff.xlsx  chap_06_gas_production_data.xlsx  chap_06_granger_causality_test_gas_log_diff.xlsx  chap_06_interest_rate_comparison_df.xlsx  chap_06_norm_test_log_diff.xlsx  chap_06_oil_consumption_data.xlsx  chap_07_msm_3m_interbank_lending_rates_model_b2.tex  chap_07_msm_3m_interbank_lending_rates_model_b2.txt  chap_07_msm_central_bank_policy_rates_model_b1.csv  chap_07_msm_central_bank_policy_rates_oil_gas_rol_vol_model_b1.tex  chap_07_msm_central_bank_policy_rates_oil_gas_rol_vol_model_b1.txt  chap_07_standard_full_time_uip_regression_3m_interbank_lending_rates.csv  chap_07_standard_full_time_uip_regression_central_bank_policy_rates.csv  (+8 more)
docs/: index.html
notebooks/: 01_econ_data_work.ipynb  01_eda.ipynb  Seminar_Fella_Hennings_Graphs_Presentation.ipynb  Seminar_Fella_Hennings_Modelling.ipynb  Seminar_Fella_Hennings_Modelling_Benchmark.ipynb  Seminar_Fella_Hennings_Modelling_Clustering.ipynb  Submission_Fella_Hennings.ipynb  experiments.ipynb  gas_oil_data.ods  neer_basket_data_01012000.csv
requirements/: requirements.txt
seminar/: .aux  bibliography.bib  committee_members.aux  main.aux  main.bbl  main.bcf  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  preamble.tex  seminar.sty  titlepage.tex
(+220 files in other folders)
