[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfinance"
version = "0.1.0"
description = "Machine learning-based trading strategies for quantitative finance."
authors = [{name = "Your Name", email = "you@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "pytest"
]